email and password resets

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,5 +21,12 @@
     <p>{{ form.remember_me }} {{ form.remember_me.label }}</p>
     <p>{{ form.submit }}</p>
   </form>
-  <p>New User? <a href="{{ url_for('register') }}">Click to register</a></p>
+  <p>
+    Forget your password?
+    <a href="{{ url_for('reset_password_request') }}">Click to reset it</a>
+  </p>
+  <p>
+    New User?
+    <a href="{{ url_for('register') }}">Click to register</a>
+  </p>
 {% endblock %}
