password reset and initial bootstrap

--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -1,6 +1,6 @@
 <p>Dear {{ user.username }},</p>
 <p>
-  To reste your password
+  To reset your password
   <a href="{{ url_for('reset_password', token=token, _external=True) }}">
     click here</a>.
 </p>
