--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-  <table>
-    <tr valign="top">
-      <td><img src="{{ user.avatar(128) }}" alt=""></td>
+  <table class="table table-hover">
+    <tr>
+      <td width="256px"><img src="{{ user.avatar(256) }}" alt=""></td>
       <td>
         <h1>User: {{ user.username }}</h1>
         {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
@@ -15,14 +15,14 @@
           <p>
             <form action="{{ url_for('follow', username=user.username) }}" method="post">
               {{ form.hidden_tag() }}
-              {{ form.submit(value='Follow') }}
+              {{ form.submit(value='Follow', class_='btn btn-default') }}
             </form>
           </p>
         {% else %}
           <p>
             <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
               {{ form.hidden_tag() }}
-              {{ form.submit(value='Unfollow') }}
+              {{ form.submit(value='Unfollow', class_='btn btn-default') }}
             </form>
           </p>
         {% endif %}
@@ -33,10 +33,5 @@
   {% for post in posts %}
     {% include '_post.html' %}
   {% endfor %}
-  {% if prev_url %}
-    <a href="{{ prev_url }}">Newer posts</a>
-  {% endif %}
-  {% if next_url %}
-    <a href="{{ next_url }}">Older posts</a>
-  {% endif %}
+  {% include '_pager.html' %}
 {% endblock %}
